--- a/src/App.css
+++ b/src/App.css
@@ -61,3 +61,36 @@
   padding: 10px;
   cursor: pointer;
 }
+
+/* 일기 리스트 */
+.DiaryList{
+  border: 1px solid #ccc;
+  padding: 20px;
+  margin-top: 20px;
+}
+.DiaryList h2{
+  text-align: center;
+}
+
+/* 일기 아이템 */
+.DiaryItem{
+  background-color: rgb(240,240,240);
+  margin-bottom: 10px;
+  padding: 20px;
+}
+
+.DiaryItem .info{
+  border-bottom: 1px solid #ccc;
+  padding-bottom: 10px;
+  margin-bottom: 10px;
+}
+
+.DiaryItem .date{
+  color: gray;
+}
+
+.DiaryItem .content{
+  font-weight: bold;
+  margin-bottom: 30px;
+  margin-top: 30px;
+}
