--- a/SimpleDiary/src/App.css
+++ b/SimpleDiary/src/App.css
@@ -37,59 +37,60 @@
   }
 }
 
-.DiaryEditor{
+.DiaryEditor {
   border: 1px solid #ccc;
   text-align: center;
   padding: 20px;
-} 
-.DiaryEditor input, textarea{
-   margin-bottom: 20px;
-   width: 500px;
-   padding: 10px;
 }
-.DiaryEditor textarea{
+.DiaryEditor input,
+textarea {
+  margin-bottom: 20px;
+  width: 500px;
+  padding: 10px;
+}
+.DiaryEditor textarea {
   height: 150px;
 }
 
-.DiaryEditor select{
+.DiaryEditor select {
   width: 300px;
   padding: 10px;
   margin-bottom: 20px;
 }
-.DiaryEditor button{
+.DiaryEditor button {
   width: 500px;
   padding: 10px;
   cursor: pointer;
 }
 
 /* 일기 리스트 */
-.DiaryList{
+.DiaryList {
   border: 1px solid #ccc;
   padding: 20px;
   margin-top: 20px;
 }
-.DiaryList h2{
+.DiaryList h2 {
   text-align: center;
 }
 
 /* 일기 아이템 */
-.DiaryItem{
-  background-color: rgb(240,240,240);
+.DiaryItem {
+  background-color: rgb(240, 240, 240);
   margin-bottom: 10px;
   padding: 20px;
 }
 
-.DiaryItem .info{
+.DiaryItem .info {
   border-bottom: 1px solid #ccc;
   padding-bottom: 10px;
   margin-bottom: 10px;
 }
 
-.DiaryItem .date{
+.DiaryItem .date {
   color: gray;
 }
 
-.DiaryItem .content{
+.DiaryItem .content {
   font-weight: bold;
   margin-bottom: 30px;
   margin-top: 30px;
