--- a/EmotionDiary/src/App.css
+++ b/EmotionDiary/src/App.css
@@ -2,6 +2,11 @@
 /* font-family: "Hahmlet", serif;
   font-family: "Nanum Myeongjo", serif; */
 
+:root {
+  --font-total: "Nanum Myeongjo";
+  --font-contect: "Hahmlet", serif;
+  --padding-basic: 10px 20px 10px 20px;
+}
 /* 전체 폰트 사용 */
 body {
   background-color: #f9f6f6;
@@ -9,7 +14,7 @@ body {
   justify-content: center;
   /* flex 일때 세로축을 중심으로 가운데 두겠다 */
   align-items: center;
-  font-family: "Nanum Myeongjo";
+  font-family: var(--font-total);
   min-height: 100vh;
   margin: 0px;
 }
@@ -28,10 +33,10 @@ body {
 #root {
   background-color: white;
   box-shadow: rgba(100, 100, 111, 0.2) 0px 7px 20px 0px;
-  border-radius: 3px;
+  border-radius: 4px;
 }
 .App {
-  min-height: 85vh;
+  min-height: 88vh;
   padding-left: 20px;
   padding-right: 20px;
 }
@@ -41,12 +46,13 @@ body {
   cursor: pointer;
   border: none;
   border-radius: 7px;
-  padding: 10px 20px 10px 20px;
+  padding: var(--padding-basic);
   font-size: 18px;
   /* 안의 글자가 짤려서 2줄이 되지 않도록  */
   white-space: nowrap;
-  font-family: "Hahmlet", serif;
+  font-family: var(--font-contect);
 }
+
 .MyButton_default {
   background-color: #f1f1f1;
   color: black;
@@ -83,5 +89,92 @@ header .head_btn_left {
 header .head_btn_right {
   width: 25%;
   justify-content: end;
-  font-family: "Hahmlet";
+  font-family: var(--font-contect);
+}
+/* =====DiaryList======= */
+.DiaryList .menu_wrapper {
+  margin-top: 20px;
+  margin-bottom: 30px;
+  display: flex;
+  justify-content: space-between;
+}
+.DiaryList .menu_wrapper .right_col {
+  /* flex-grow: 남은 영역에 전체를 가지게 된다 */
+  flex-grow: 1;
+}
+.DiaryList .menu_wrapper .right_col button {
+  width: 100%;
+}
+.DiaryList .ControlMenu {
+  margin-right: 10px;
+  border: none;
+  border-radius: 5px;
+  background-color: #ececec;
+  padding: var(--padding-basic);
+  cursor: pointer;
+  font-size: 18px;
+  font-family: var(--font-total);
+}
+/* =====DiaryItem============ */
+.DiaryItem {
+  padding-top: 15px;
+  padding-bottom: 15px;
+  border-bottom: 1px solid #e2e2e2;
+  display: flex;
+  justify-content: space-between;
+}
+.DiaryItem .emotion_img_wrapper {
+  cursor: pointer;
+  min-width: 160px;
+  height: 85px;
+  border-radius: 5px;
+  display: flex;
+  justify-content: center;
+}
+
+.DiaryItem .emotion_img_wrapper_1 {
+  background-color: #33e03381;
+  min-width: 80px;
+  border-radius: 17px;
+}
+.DiaryItem .emotion_img_wrapper_2 {
+  background-color: #4fe24f55;
+  min-width: 80px;
+  border-radius: 17px;
+}
+.DiaryItem .emotion_img_wrapper_3 {
+  background-color: #e5ec278b;
+  min-width: 80px;
+  border-radius: 17px;
+}
+.DiaryItem .emotion_img_wrapper_4 {
+  background-color: #e6ab2155;
+  min-width: 80px;
+  border-radius: 17px;
+}
+.DiaryItem .emotion_img_wrapper_5 {
+  background-color: #dc242455;
+  min-width: 80px;
+  border-radius: 17px;
+}
+
+.DiaryItem .info_wrapper {
+  cursor: pointer;
+  flex-grow: 1;
+  margin-left: 20px;
+}
+
+.DiaryItem .diary_date {
+  padding: 3px;
+  margin-top: 3px;
+  font-size: 19px;
+  font-weight: bold;
+  margin-bottom: 5px;
+}
+
+.DiaryItem .diary_content_preview {
+  font-size: 18px;
+}
+.DiaryItem .btn_wrapper {
+  min-width: 70px;
 }
